# gymnasium-solver

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  EXPERIMENTS.md  INTERNALS.md  LOGGING.md  MCP_SERVER.md  NOTES.md  README.md  STABLE_RETRO_M1_FINDINGS.md  TODO.md  TOOLBAR_IMPLEMENTATION.md  TOOLBAR_USAGE.md  _vizdoom.ini  benchmark_rollouts.py  checkpoint_manager.py  codex.sh  count_py_lines.py  debug_histogram.py  environment.toml  gru_tutorial.ipynb  hyperparam_control.py  inspect.py  inspect_mcp.sh  inspector.py  inspector_app.py  mcp_server.py  mcp_server_config.json  metrics.md  notebook.ipynb  octest.py  play.py  policy_weights.pth  publish.py  pyproject.toml  run_inspect.py  run_play.py  run_publish.py  (+12 more)
VIBES/: ARCHITECTURE_GUIDE.md  CODING_PRINCIPLES.md  INTERNALS.md
agents/: __init__.py  base.py  base_agent.py  hyperparameter_mixin.py  ppo.py  qlearning.py  reinforce.py
callbacks/: __init__.py  early_stopping.py  end_of_training_report.py  hyperparameter_scheduler.py  model_checkpoint.py  print_metrics.py  video_logger.py
config/: metrics.yaml
configs/: Acrobot-v1.yaml  CartPole-v1.yaml  LunarLander-v3.yaml  MountainCar-v0.yaml  Pendulum-v1.yaml  default.yaml
configs_backup/: CartPole-v1.yaml  LunarLander-v3.yaml  MountainCar-v0.yaml
env_wrappers/: __init__.py  env_wrapper_registry.py  reward_shaper_mountaincar_v0.py
guides/: PPO.md  experiments.md  fix_pong.md  general.md  mcp_debug_server.md  tune_nenvs.md
gym_envs/: bandit.py  mab_env.py
gym_wrappers/: __init__.py  action_reward_shaper.py  ale_action_masking.py  ale_vec_env_adapter.py  ale_vec_video_recorder.py  bandit.py  discrete_action_space_remapper.py  discrete_encoder.py  discrete_to_array.py  discrete_to_binary.py  env_info.py  env_video_recorder.py  frame_skip.py  ocatari_helpers.py  pettingzoo_single_agent.py  pixel_observation.py  reward_shaper_base.py  sticky_actions.py  utils.py  vec_env_info.py  vec_info.py  vec_normalize_static.py  vec_obs_printer.py  vec_video_recorder.py  vizdoom.py  vizdoom_basic.py  vizdoom_deadly_corridor.py  vizdoom_defend_the_center.py  vizdoom_defend_the_line.py  vizdoom_health_gathering.py
hyperparams/: ppo.yaml  reinforce.yaml
learners/: base.py  ppo.py  reinforce.py
llm_agents/: TASKS.md
loggers/: __init__.py  csv_lightning_logger.py  csv_logger.py  csv_metrics_logger.py  metrics_csv_lightning_logger.py  metrics_csv_logger.py  metrics_table_logger.py  print_metrics_logger.py
mcp/: __init__.py  debug_server.py
prompts/: DRY.md  README_AUDIT.md  TEST_AUDIT.md
schemas/: env_info.schema.json
scripts/: MULTISTAGE_SWEEP_GUIDE.md  README_MODAL.md  benchmark_alepy_fps.py  benchmark_atari_vector_env.py  benchmark_atarivecenv.py  benchmark_collectors.py  benchmark_dataloaders.py  benchmark_envs.py  benchmark_rollout_collector.py  benchmark_sb3_rollout_collector.py  benchmark_sb3_vecenv_fps.py  benchmark_sbvecenv.py  benchmark_vecenv_fps.py  brax_eval_policy.py  brax_train_policy.py  check_alepy_arch.py  codex_run.py  debug_sweep.py  find_unused_defs.py  frozenlake_qlearning.py  list_retro_roms.py  minari_bc_example.py  modal_sweep_runner.py  modal_train.py  multistage_sweep.py  optimize_ale_pong.py  play_mario_random.py  play_nes_random.py  render_checkpoint_progression.py  render_env.py  setup_wandb_dashboard.py  smoke_all_configs.py  smoke_subproc_env.py  smoke_test_envs.py  smoke_train_envs.py  stable-retro-arm-install.sh  strip_yaml_defaults.py  sweep_grid.py  sweep_modal.py  test2.py  (+4 more)
setup_utils/: __init__.py  evaluation.py  models.py
tests/: conftest.py  test_base_agent_helpers.py  test_best_video_symlink.py  test_checkpoint.py  test_config.py  test_config_selection.py  test_discrete_encoder.py  test_env_info_jsonschema.py  test_env_info_validation.py  test_env_wrapper_registry.py  test_epoch_shuffling.py  test_evaluation.py  test_format_duration.py  test_hyperparameter_mixin.py  test_index_dataset.py  test_logging_utils.py  test_masked_categorical.py  test_mc_baseline_mask.py  test_metric_bundles.py  test_metrics_csv_logger_precision.py  test_models.py  test_multipass_random_sampler.py  test_policy_factory_initialization.py  test_pong_v5_feature_extractor.py  test_ppo.py  test_ppo_integration.py  test_ppo_kl_early_stop.py  test_print_metrics_logger.py  test_reports.py  test_rollout_buffer.py  test_rollout_collector.py  test_rollouts.py  test_rollouts_extra.py  test_run_manager.py  test_schedulers.py  test_train_cli.py  tests.py
trainer_callbacks/: __init__.py  aggregate_metrics.py  console_summary.py  csv_logger.py  csv_metrics_logger.py  dispatch_metrics.py  early_stopping.py  end_of_training_report.py  epoch_metrics_logger.py  hyperparameter_scheduler.py  hyperparameter_sync.py  incremental_wandb_upload.py  keyboard_shortcuts.py  model_checkpoint.py  monitor_metrics.py  plateau_intervention.py  prefit_presentation.py  print_metrics.py  upload_run.py  video_logger.py  wandb_metrics_logger.py  wandb_video_logger.py  warmup_eval.py
utils/: callback_builder.py  checkpoint.py  config.py  csv_lightning_logger.py  csv_logger.py  dataloaders.py  datasets.py  decorators.py  dict_utils.py  distributions.py  env_info_schema.py  env_spec.py  environment.py  environment_registry.py  evaluation.py  filesystem.py  formatting.py  io.py  logging.py  metric_bundles.py  metrics.py  metrics_buffer.py  metrics_config.py  metrics_history.py  metrics_monitor.py  metrics_recorder.py  metrics_serialization.py  metrics_triggers.py  misc.py  modal_train.py  model_registry.py  models.py  optimizer_factory.py  policy_factory.py  policy_ops.py  print_metrics_logger.py  random.py  random_utils.py  replay_buffer.py  reports.py  (+28 more)
vizdoom_configs/: README.md  check_wad.py  doom_e1m1.cfg
wandb/: latest-run
wrappers/: __init__.py  discrete_to_binary.py  discrete_to_onehot.py  pixel_observation.py  (+5 more)
(+176 files in other folders)
