[project]
name = "gymnasium-solver-env"
version = "0.1.0"
description = "Environment for gymnasium-solver (uv/jupyter kernel)"
requires-python = ">=3.9"
dependencies = [
    "gymnasium[classic-control,atari,box2d,mujoco,other]",
    "ale-py",
    "torch",
    "numpy",
    "stable-baselines3>=2.0.0",
    "wandb",
    "ocatari",
    "pytorch-lightning",
    "ipykernel",
    "jupyter",
    "torchvision",
    "pytest",
    "pyyaml",
    "watchdog",
    "setuptools<80"
]

[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["tests", "learners", "utils"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Add the current directory to the Python path so imports work correctly
addopts = [
    "-v",                    # Verbose output
    "--tb=short",           # Short traceback format
    "--strict-markers",     # Strict marker handling
    "-ra",                  # Show short test summary for all outcomes
]

# Add current directory to Python path for imports
pythonpath = ["."]

# Configure test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Minimum version requirement
minversion = "6.0"
