[project]
name = "gymnasium-solver-env"
version = "0.1.0"
description = "Environment for gymnasium-solver (uv/jupyter kernel)"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control,atari,box2d,mujoco,other]",
    "gymnasium-robotics",
    "ale-py",
    "minari[hdf5]",
    "torch",
    "numpy",
    "stable-baselines3>=2.0.0",
    "wandb",
    "wandb-workspaces",
    # Pin OCAtari to avoid broken sdists (e.g., 1.1.5 missing requirements.txt)
    "ocatari>=2.2.1",
    "pytorch-lightning",
    "ipykernel",
    "jupyter",
    "torchvision",
    "pytest",
    "pyyaml",
    "ruamel.yaml",
    "watchdog",
    "setuptools<80",
    "huggingface_hub>=0.22.0",
    "gradio>=4.0.0",
    "vizdoom",
    "pettingzoo>=1.25.0",
    "jax[cuda12]>=0.5.3",
    "brax>=0.13.0",
    "flax>=0.10.6",
    "optax>=0.2.6",
]

[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["tests", "learners", "utils"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Add the current directory to the Python path so imports work correctly
addopts = [
    "-v",                    # Verbose output
    "--tb=short",           # Short traceback format
    "--strict-markers",     # Strict marker handling
    "-ra",                  # Show short test summary for all outcomes
]

# Add current directory to Python path for imports
pythonpath = ["."]

# Configure test markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Minimum version requirement
minversion = "6.0"

# Optional dependency groups
[project.optional-dependencies]
# CPU-only Brax/JAX stack for scripts/brax_train_policy.py
brax = [
  "brax",
  "flax",
  "optax",
  "jax[cpu]",
]

# GPU (CUDA 12) Brax/JAX stack. Requires installing with the JAX CUDA wheels index, e.g.:
#   pip install -U "jax[cuda12]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
# Or with uv:
#   uv add 'jax[cuda12]' --find-links https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
brax-cuda12 = [
  "brax",
  "flax",
  "optax",
  "jax[cuda12]",
]
